--- a/index.ipynb
+++ b/index.ipynb
@@ -280,7 +280,7 @@
     {
      "data": {
       "text/plain": [
-       "<map at 0x10eda6860>"
+       "<map at 0x7f8f081f9208>"
       ]
      },
      "execution_count": 9,
